--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/3dArt/Geo/Characters/LabMouse(Temp)/Materials/texture_10.mat
+Assets/3dArt/Geo/Characters/LabMouse(Temp)/Materials/texture_10.mat.meta
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
